swap out content!

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -935,7 +935,7 @@ section {
   color: #728394;
 }
 
-.contact .info .email, .contact .info .phone {
+.contact .info .phone {
   margin-top: 40px;
 }
 
